--- a/components/Header/header.module.css
+++ b/components/Header/header.module.css
@@ -38,7 +38,7 @@
   }
 }
 
-.li {
+.headerLink {
   padding: 1rem 2rem;
   text-decoration: none;
   color: white;
@@ -49,6 +49,10 @@
   transition: all 0.2s ease-in-out;
   display: inline-block;
   text-align: center;
+}
+
+.headerLink:hover {
+  background-color: #0396a6;
 }
 
 @media (max-width: 600px) {
